[package]
authors = ["atil <atilkurtulmus@gmail.com>"]
edition = "2018"
name = "parser"
version = "0.1.0"
[dependencies]
fxhash = "0.2.1"
lalrpop-util = "0.19.1"
regex = "1"
xml-rs = "0.8.3"
vk-parse = "0.5"
Inflector = "0.11.4"
[build-dependencies]
cc = "1.0"
lalrpop = {version = "0.19.1", features = ["lexer"]}
